--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [bumpversion]
 commit = True
 current_version = 0.0.0
-files = asgi_babel.py
+files = asgi_babel/__init__.py
 tag = True
 tag_name = {new_version}
 message = build(version): {current_version} -> {new_version}
