--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,7 @@ classifiers =
 packages = asgi_babel
 python_requires = >= 3.7
 install_requires = 
-	asgi-tools      >= 0.16.3
+	asgi-tools      >= 0.18
 	babel
 
 [options.package_data]
@@ -62,3 +62,8 @@ addopts = -xsv
 
 [pylama]
 ignore = D
+
+[mypy]
+
+[mypy-babel]
+ignore_missing_imports = True
