--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,7 @@ classifiers =
 packages = asgi_babel
 python_requires = >= 3.7
 install_requires = 
-	asgi-tools      >= 0.19
+	asgi-tools      >= 0.23.1
 	babel
 
 [options.package_data]
@@ -49,8 +49,8 @@ asgi_babel = py.typed
 [options.extras_require]
 tests = 
 	anyio
-	mypy
 	pytest
+	pytest-mypy
 	trio
 build = 
 	bump2version
@@ -58,7 +58,7 @@ build =
 	wheel
 
 [tool:pytest]
-addopts = -xsv
+addopts = -xsv --mypy
 
 [pylama]
 ignore = D
@@ -67,3 +67,11 @@ ignore = D
 
 [mypy-babel]
 ignore_missing_imports = True
+
+[tox:tox]
+envlist = py37,py38,py39
+
+[testenv]
+deps = -e .[tests]
+commands = 
+	pytest tests
