--- a/setup.cfg
+++ b/setup.cfg
@@ -41,22 +41,24 @@ classifiers =
 packages = asgi_babel
 python_requires = >= 3.7
 install_requires = 
-	asgi-tools      >= 0.23.1
-	babel
+    asgi-tools      >= 0.26
+    babel
 
 [options.package_data]
 asgi_babel = py.typed
 
 [options.extras_require]
 tests = 
-	anyio
-	pytest
-	pytest-mypy
-	trio
+    anyio
+    pytest
+    pytest-mypy
+    trio
 build = 
-	bump2version
-	twine
-	wheel
+    bump2version
+    twine
+    wheel
+example =
+    uvicorn
 
 [tool:pytest]
 addopts = -xsv --mypy
