--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,30 +23,21 @@ jobs:
     - name: Checkout changes
       uses: actions/checkout@v2
 
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Use Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Get pip cache dir
-      id: pip-cache
-      run: |
-        echo "::set-output name=dir::$(pip cache dir)"
-
     - name: Cache pip
       uses: actions/cache@v2
       with:
-        path: ${{ steps.pip-cache.outputs.dir }}
+        path: ~/.cache/pip
         key: ${{ runner.os }}-pip-${{ hashFiles('setup.cfg') }}
 
     - name: Install dependencies
       run: |
         python -m pip install .[tests]
 
-    - name: Check typing
-      run: |
-        mypy asgi_babel
-
     - name: Test with pytest
       run: |
-        pytest tests
+        pytest --mypy tests
