--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,5 +39,30 @@ jobs:
         python -m pip install .[tests]
 
     - name: Test with pytest
-      run: |
-        pytest --mypy tests
+      run: exit 1
+        # pytest --mypy tests
+
+  notify:
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+
+    - name: Notify Success
+      if: ${{ success() }}
+      uses: archive/github-actions-slack@master
+      with:
+          slack-channel: C2CRL4C4V
+          slack-text: Tests are passed *[${{ github.ref }}]* https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+          slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_TOKEN }}
+          slack-optional-as_user: false
+          slack-optional-icon_emoji: ":white_check_mark:"
+
+    - name: Notify Failure
+      if: ${{ failure() }}
+      uses: archive/github-actions-slack@master
+      with:
+          slack-channel: C2CRL4C4V
+          slack-text: Tests are failed *[${{ github.ref }}]* https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+          slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_TOKEN }}
+          slack-optional-as_user: false
+          slack-optional-icon_emoji: ":red_circle:"
