--- a/setup.cfg
+++ b/setup.cfg
@@ -34,31 +34,16 @@ classifiers =
 	Programming Language :: Python :: 3.7
 	Programming Language :: Python :: 3.8
 	Programming Language :: Python :: 3.9
+	Programming Language :: Python :: 3.10
 	Framework :: AsyncIO
 	Framework :: Trio
 
 [options]
 packages = asgi_babel
 python_requires = >= 3.7
-install_requires = 
-	asgi-tools      >= 0.47.9
-	babel
 
 [options.package_data]
 asgi_babel = py.typed
-
-[options.extras_require]
-tests = 
-	pytest
-	pytest-aio
-	pytest-mypy
-	trio
-	curio
-build = 
-	bump2version
-	wheel
-example = 
-	uvicorn
 
 [tool:pytest]
 addopts = -xsv --mypy
@@ -67,12 +52,10 @@ addopts = -xsv --mypy
 ignore = D
 
 [mypy]
-
-[mypy-babel]
 ignore_missing_imports = True
 
 [tox:tox]
-envlist = py37,py38,py39
+envlist = py37,py38,py39,py310
 
 [testenv]
 deps = -e .[tests]
