--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.7', '3.8', '3.9', '3.10']
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
 
     steps:
     - name: Checkout changes
@@ -26,16 +26,14 @@ jobs:
     - name: Use Python ${{ matrix.python-version }}
       uses: actions/setup-python@main
       with:
+        cache: pip
         python-version: ${{ matrix.python-version }}
-
-    - name: Cache pip
-      uses: actions/cache@main
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('requirements/requirements.txt', 'requirements/requirements-tests.txt') }}
 
     - name: Install dependencies
       run: python -m pip install .[tests]
+
+    - name: Check code
+      run: ruff asgi_babel
 
     - name: Test with pytest
       run: pytest --mypy tests
