--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "asgi-babel"
 version = "0.8.9"
 description = "Internationalization (i18n) support for ASGI applications"
 readme = "README.rst"
-requires-python = ">=3.7"
+requires-python = ">=3.8"
 license = {"text" = "MIT License"}
 authors = [{ name = "Kirill Klenov", email = "horneds@gmail.com" }]
 keywords = ["locale", "i18n", "l10n", "babel", "gettext", "translation", "asyncio", "trio", "asgi"]
@@ -14,7 +14,6 @@ classifiers = [
   "License :: OSI Approved :: MIT License",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.7",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
@@ -24,7 +23,7 @@ classifiers = [
   "Framework :: Trio",
 ]
 dependencies = [
-  "asgi-tools >= 0.71.0",
+  "asgi-tools >= 0.73.0",
   "babel",
 ]
 
@@ -60,7 +59,7 @@ ignore_missing_imports = true
 [tool.tox]
 legacy_tox_ini = """
 [tox]
-envlist = py37,py38,py39,py310,py311,pypy39
+envlist = py38,py39,py310,py311,pypy39
 
 [testenv]
 deps = -e .[tests]
