--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
 
     - uses: actions/setup-python@main
       with:
-        python-version: 3.9
+        python-version: '3.11'
 
     - name: Build package
       run: |
