--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.9', '3.10', '3.11', '3.12']
 
     steps:
     - name: Checkout changes
@@ -33,7 +33,7 @@ jobs:
       run: python -m pip install .[tests]
 
     - name: Check code
-      run: ruff asgi_babel
+      run: ruff check asgi_babel
 
     - name: Test with pytest
       run: pytest --mypy tests
