--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,35 +1,73 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
-repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
-    hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-yaml
-    -   id: check-added-large-files
 
-- repo: https://github.com/charliermarsh/ruff-pre-commit
-  rev: v0.0.253
+fail_fast: true
+default_install_hook_types: [commit-msg, pre-commit, pre-push]
+
+repos:
+
+- repo: https://github.com/qoomon/git-conventional-commits
+  rev: 'v2.6.7'
   hooks:
-  - id: ruff
-    name: Check code
-    args: [--fix, --exit-non-zero-on-fix]
+  - id: conventional-commits
+    args: ["-c", ".git-commits.yaml"]
+    stages: ["commit-msg"]
+
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.6.0
+  hooks:
+  - id: check-case-conflict
+    stages: ["pre-commit"]
+  - id: check-merge-conflict
+    stages: ["pre-commit"]
+  - id: check-added-large-files
+    stages: ["pre-commit"]
+    args: ['--maxkb=5000']
+  - id: check-ast
+    stages: ["pre-commit"]
+  - id: check-executables-have-shebangs
+    stages: ["pre-commit"]
+  - id: check-symlinks
+    stages: ["pre-commit"]
+  - id: check-toml
+    stages: ["pre-commit"]
+  - id: check-yaml
+    stages: ["pre-commit"]
+  - id: debug-statements
+    stages: ["pre-commit"]
+  - id: end-of-file-fixer
+    stages: ["pre-commit"]
+  - id: trailing-whitespace
+    stages: ["pre-commit"]
+
+- repo: https://github.com/psf/black
+  rev: 24.4.2
+  hooks:
+  - id: black
+    stages: ["pre-commit"]
 
 - repo: local
   hooks:
-    - id: check-types
-      name: Check types
-      entry: mypy
-      language: system
-      pass_filenames: false
-    - id: check-code
-      name: Refactor code
-      entry: refurb asgi_babel
-      language: system
-      pass_filenames: false
-    - id: run-tests
-      name: Run tests
-      entry: pytest tests
-      language: system
-      pass_filenames: false
+  - id: ruff
+    name: ruff
+    entry: ruff check asgi_babel
+    language: system
+    pass_filenames: false
+    files: \.py$
+    stages: ["pre-commit"]
+
+  - id: mypy
+    name: mypy
+    entry: mypy
+    language: system
+    pass_filenames: false
+    files: \.py$
+    stages: ["pre-push"]
+
+  - id: pytest
+    name: pytest
+    entry: pytest
+    language: system
+    pass_filenames: false
+    files: \.py$
+    stages: ["pre-push"]
