feat: drop py39, add py313,314

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "asgi-babel"
 version = "0.10.0"
 description = "Internationalization (i18n) support for ASGI applications"
 readme = "README.rst"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 license = { "text" = "MIT License" }
 authors = [{ name = "Kirill Klenov", email = "horneds@gmail.com" }]
 keywords = ["locale", "i18n", "l10n", "babel", "gettext", "translation", "asyncio", "trio", "asgi"]
@@ -14,10 +14,11 @@ classifiers = [
   "License :: OSI Approved :: MIT License",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3.14",
   "Topic :: Internet :: WWW/HTTP",
   "Framework :: AsyncIO",
   "Framework :: Trio",
@@ -36,7 +37,7 @@ tests = [
   "ruff",
 ]
 example = ["uvicorn"]
-dev = ["bump2version", "refurb; python_version >= '3.9'", "tox", "pre-commit"]
+dev = ["bump2version", "tox", "pre-commit"]
 
 [tool.setuptools]
 packages = ['asgi_babel']
@@ -54,24 +55,19 @@ ignore_missing_imports = true
 [tool.tox]
 legacy_tox_ini = """
 [tox]
-envlist = py39,py310,py311,py312,pypy39
+envlist = py310,py311,py312,py313,py314,pypy311
 
 [testenv]
 deps = -e .[tests]
 commands =
         mypy
 	pytest tests
-
-[testenv:pypy39]
-deps = -e .[tests]
-commands =
-	pytest tests
 """
 
 [tool.ruff]
 fix = true
 line-length = 100
-target-version = "py39"
+target-version = "py310"
 exclude = [".venv", "docs", "examples"]
 
 [tool.ruff.lint]
