--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,43 +11,28 @@ on:
     branches: [master, develop]
 
 jobs:
-
   tests:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.9', '3.10', '3.11', '3.12']
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
 
     steps:
-    - name: Checkout changes
-      uses: actions/checkout@main
+      - name: Checkout changes
+        uses: actions/checkout@main
 
-    - name: Use Python ${{ matrix.python-version }}
-      uses: actions/setup-python@main
-      with:
-        cache: pip
-        python-version: ${{ matrix.python-version }}
+      - name: Use Python ${{ matrix.python-version }}
+        uses: actions/setup-python@main
+        with:
+          cache: pip
+          python-version: ${{ matrix.python-version }}
 
-    - name: Install dependencies
-      run: python -m pip install .[tests]
+      - name: Install dependencies
+        run: python -m pip install .[tests]
 
-    - name: Check code
-      run: ruff check asgi_babel
+      - name: Check code
+        run: ruff check asgi_babel
 
-    - name: Test with pytest
-      run: pytest --mypy tests
-
-  notify:
-    runs-on: ubuntu-latest
-    needs: tests
-    steps:
-
-    - name: Notify Success
-      uses: archive/github-actions-slack@master
-      with:
-          slack-channel: C2CRL4C4V
-          slack-text: Tests are passed *[${{ github.ref }}]* https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
-          slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_TOKEN }}
-          slack-optional-as_user: false
-          slack-optional-icon_emoji: ":white_check_mark:"
+      - name: Test with pytest
+        run: pytest --mypy tests
